--- a/src/lib/styles/globals.css
+++ b/src/lib/styles/globals.css
@@ -2,3 +2,11 @@
 
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800;900&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Baloo+Bhai+2:wght@400;500;600;700;800&display=swap");
+@import url("https://cdn.jsdelivr.net/gh/hung1001/font-awesome-pro@4cac1a6/css/all.css");
+
+form {
+	width: 100%;
+}
+tr {
+	cursor: pointer;
+}
