--- a/src/lib/styles/globals.css
+++ b/src/lib/styles/globals.css
@@ -3,6 +3,7 @@
 @import url("https://cdn.jsdelivr.net/gh/hung1001/font-awesome-pro@4cac1a6/css/all.css");
 @import url("css/calendar.css");
 @import url("css/uploadcare.css");
+@import url("css/progressbar.css");
 
 form {
   width: 100%;
